<resources>
    <string name="app_name">چرتکه</string>
    <string name="start">شروع</string>
    <string name="yes">آماده ام</string>
    <string name="continue_">ادامه</string>
    <string name="exit">خروج</string>
    <string name="amade">...</string>
    <string name="asan">آسان</string>
    <string name="medium">متوسط</string>
    <string name="hard">سخت</string>
    <string name="pro">پیشرفته</string>
    <string name="help">راهنمایی</string>
    <string name="javab">جواب ...</string>
    <string name="ok">باشه</string>
    <string name="baleh">بله</string>
    <string name="refresh_success">بازی با موفقیت تازه شد</string>
    <string name="noo">لغو</string>
    <string name="tenitem">10 مرحله</string>
    <string name="twenyitem">20 مرحله</string>
    <string name="help_list">مرحله مورد نظر خود را انتخاب کنید</string>
    <string name="help_select">لطفا سطح مورد نظر خود را انتخاب کنید:</string>
    <string name="bye">به امید دیدار... خدانگهدار</string>
    <string name="get_it">فهمیدم</string>
    <string name="help_emtiaz">میزان امتیاز شما</string>
    <string name="help_mar">مرحله ای که شما در آن قرار دارید</string>
    <string name="help_start">برای شروع بازی اینجا را کلیک کنید بعد از دو ثانیه بازی شروع می شود</string>
    <string name="help_total">به ازای هر پاسخ صحیح در مرحله آسان:5 متوسط:10 سخت:15 پیشرفته:20 امتیاز مثبت, پاسخ اشتباه 5 امتیاز منفی دریافت می کنید بعد از 3 بار پاسخ اشتباه در یک مرحله به مرحله اول برگردید و امتیاز شما  صفر می شود</string>
    <string name="newgame">از نو </string>
    <string name="truejavab">آفرین جواب شما صحیح است</string>
    <string name="badjavab">بیشتر دقت کن</string>
    <string name="not_access">شما اجازه دسترسی به این مرحله را ندارید</string>
    <string name="gorteh">چرتکه</string>
    <string name="gameover">متاسفانه شما بازی را باختید</string>
    <string name="twice_click">برای خروج دوبار فشار دهید</string>
    <string name="winner_title">برنده</string>
    <string name="refresh_gmae">تازه سازی بازی</string>
    <string name="refresh_game_que">آیا شما مطمئنی که می خواهید از نو بازی کنید؟</string>
    <string name="winner_body">*شما برنده یک جام جدید شدید*</string>
    <string name="insert_ahdad">لطفا جواب را وارد کنید</string>
    <string name="refresh_game">تازه سازی بازی</string>
    <string name="develop">Developer:\n ali-zareshahi@outlook.com</string>
</resources>
