<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_sele"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectLevelActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:id="@+id/card_view_medium"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_alignParentLeft="true"
            android:elevation="5dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/thumbnail2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_cover_height"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/thumbnail2"
                    android:layout_height="50dp">
                    <CustomView.CustomTextView
                        android:id="@+id/title2"
                        android:text="@string/medium"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/album_title_padding"
                        android:paddingRight="@dimen/album_title_padding"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/album_title" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_asan"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:elevation="5dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/thumbnail1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_cover_height"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/thumbnail1"
                    android:layout_height="50dp">
                    <CustomView.CustomTextView
                        android:id="@+id/title1"
                        android:text="@string/asan"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/album_title_padding"
                        android:paddingRight="@dimen/album_title_padding"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/album_title" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_hard"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/card_view_asan"
            android:layout_alignParentRight="true"
            android:elevation="5dp"
            android:layout_marginTop="25dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/thumbnail3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_cover_height"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/thumbnail3"
                    android:layout_height="50dp">
                    <CustomView.CustomTextView
                        android:id="@+id/title3"
                        android:text="@string/hard"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/album_title_padding"
                        android:paddingRight="@dimen/album_title_padding"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/album_title" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_pro"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/card_view_asan"
            android:layout_alignParentLeft="true"
            android:elevation="5dp"
            android:layout_marginTop="25dp"
            card_view:cardCornerRadius="@dimen/card_album_radius">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/thumbnail4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/album_cover_height"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:scaleType="fitXY" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/thumbnail4"
                    android:layout_height="50dp">
                    <CustomView.CustomTextView
                        android:id="@+id/title4"
                        android:text="@string/pro"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="@dimen/album_title_padding"
                        android:paddingRight="@dimen/album_title_padding"
                        android:textColor="@color/album_title"
                        android:textSize="@dimen/album_title" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>